added php 7.2.0 test

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,2 @@
-.idea
-/bootstrap/compiled.php
 /vendor
-/storage/*
-/node_modules
-/nbproject
-/data
-.env
-*.swp
-*.bak
-~*
-*.un~
-.env.*.php
-.env.php
-.DS_Store
-Thumbs.db
-composer
-config/ide-helper.php
-phpunit
+composer.lock
